After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 728344 - (GtkPrintUnixDialog) Collate setting in Print Dialog does not override PPD setting for Collate
(GtkPrintUnixDialog)
Collate setting in Print Dialog does not override PPD setting for Collate
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Printing
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-04-16 14:02 UTC by Andrey Makhalkin
Modified: 2016-01-07 09:12 UTC
See Also:
GNOME target: ---
GNOME version: 3.7/3.8


Attachments
printing: always propagate Collate value (978 bytes, patch)
2016-01-06 13:51 UTC, Felipe Borges
committed Details | Review

Description Andrey Makhalkin 2014-04-16 14:02:28 UTC
When Collate is set ON by Administrator for a print queue, unsetting Collate flag in print dialog does not affect Collate option setting passed to CUPS.

Steps to reproduce:

1) Install a print queue:
lpadmin -p collatetest -v socket://127.0.0.1:9100 -P Samsung_CLX-9252_9352_Series.ppd -o Collate=True -E

2) Run in terminal:
nc -l 9100 > out.ps

3) Open a large text file with gedit, for example, /etc/services
4) Select File->Print... action
5) Select collatetest printer
6) Set Range: Pages: 1,2
7) Set Copies to 2
8) Uncheck Collate flag
9) Press Print
10) Check out.ps file.


It will contain  
%%BeginFeature: *Collate True
<</Collate true>> setpagedevice
%%EndFeature

entry, despite the Collate has been turned off
Comment 1 Felipe Borges 2016-01-06 13:51:42 UTC
It turned out that the bug was actually on cups-filter[0].

Nevertheless, collation is determined by having "Collation True" in the job requirements. Other than that, collation is disabled.

Instead of relying on this behavior (which could be backend-dependent), we could always propagate the Collate option.

[0] https://bugzilla.redhat.com/show_bug.cgi?id=1295817#c0
Comment 2 Felipe Borges 2016-01-06 13:51:55 UTC
Created attachment 318322 [details] [review]
printing: always propagate Collate value
Comment 3 Marek Kašík 2016-01-06 13:58:20 UTC
Review of attachment 318322 [details] [review]:

The patch looks good to me. Push it to master please. Thanks
Comment 4 Felipe Borges 2016-01-06 14:17:48 UTC
pushed to master as 98080e0289e311998fdc9f2ee61d2a3922e55c81