printing: always propagate Collate value

https://bugzilla.gnome.org/show_bug.cgi?id=728344